--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,9 @@
 {
   "compilerOptions": {
-    "outDir": "build",
+    "outDir": "lib",
     "module": "esnext",
     "target": "es5",
+    "strict": true,
     "lib": ["es6", "dom", "es2016", "es2017"],
     "sourceMap": true,
     "allowJs": false,
@@ -16,8 +17,10 @@
     "strictNullChecks": true,
     "suppressImplicitAnyIndexErrors": true,
     "noUnusedLocals": true,
-    "noUnusedParameters": true
+    "noUnusedParameters": true,
+    "allowSyntheticDefaultImports": true,
+
   },
   "include": ["src"],
-  "exclude": ["node_modules", "build", "dist", "example", "rollup.config.js"]
+  "exclude": ["node_modules", "lib", "dist", "example", "rollup.config.js"]
 }
